Add some basic routing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "immutable": "^5.0.0-beta.4",
     "less": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
+    "surge": "^0.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
